--- a/tethysapp/hydroshare_timeseries_manager/templates/hydroshare_timeseries_manager/home.html
+++ b/tethysapp/hydroshare_timeseries_manager/templates/hydroshare_timeseries_manager/home.html
@@ -12,6 +12,7 @@
     <table id="data-table" class="display">
       <thead>
         <tr>
+          <th></th>
           <th>Status</th>
           <th>Site Name</th>
           <th>Site Code</th>
@@ -30,8 +31,8 @@
           <th>Service Type</th>
           <th>Reference Type</th>
           <th>Return Type</th>
-          <th>Object ID</th>
-          <th>Status Code</th>
+          <th>Timeseries ID</th>
+          <th>Selected</th>
         </tr>
       </thead>
       <tbody/>
@@ -40,8 +41,8 @@
   <div hidden>
     <div id=session-id>{{session_id}}</div>
     <div id=resource-id>{{resource_id}}</div>
-    <div id=hydroshare-url>{{hydroshare_url}}</div>
-    <div id=processing>FALSE</div>
+    <div id=aggregation-id>{{aggregation_id}}</div>
+    <div id=refts>{{refts}}</div>
   </div>
 {% endblock %}
 
@@ -137,6 +138,10 @@
           <div class="form-group">
             <label for="res-keywords" class="control-label">Resource Keywords:</label>
             <input id="res-keywords" type="text" class="form-control" placeholder="Type your keywords here.">
+          </div>
+          <div class="form-group">
+            <label for="res-filename" class="control-label">Resource File Name:</label>
+            <input id="res-filename" type="text" class="form-control" placeholder="Type your base filename here.">
           </div>
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="chk-ts" checked="checked">
